// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component > Collapsible collapses correctly 1`] = `
<Collapsible
  defaultExpanded={true}
  title="collapse"
>
  <div>
    <div
      aria-level={3}
      role="heading"
    >
      <a
        aria-expanded={false}
        className="CollapsibleButton"
        onClick={[Function]}
        role="button"
        tabIndex={0}
      >
        <Icon
          type="caret-right"
        >
          <i
            className="fa fa-caret-right fa-fw "
          />
        </Icon>
        <strong>
          collapse
        </strong>
      </a>
    </div>
  </div>
</Collapsible>
`;

exports[`Component > Collapsible expands correctly 1`] = `
<Collapsible
  title="collapse"
>
  <div>
    <div
      aria-level={3}
      role="heading"
    >
      <a
        aria-expanded={true}
        className="CollapsibleButton"
        onClick={[Function]}
        role="button"
        tabIndex={0}
      >
        <Icon
          type="caret-down"
        >
          <i
            className="fa fa-caret-down fa-fw "
          />
        </Icon>
        <strong>
          collapse
        </strong>
      </a>
    </div>
    <div>
      Lorem ipsum dolor sit amet.
    </div>
  </div>
</Collapsible>
`;

exports[`Component > Collapsible renders correctly 1`] = `
<Collapsible
  title="collapse"
>
  <div>
    <div
      aria-level={3}
      role="heading"
    >
      <a
        aria-expanded={false}
        className="CollapsibleButton"
        onClick={[Function]}
        role="button"
        tabIndex={0}
      >
        <Icon
          type="caret-right"
        >
          <i
            className="fa fa-caret-right fa-fw "
          />
        </Icon>
        <strong>
          collapse
        </strong>
      </a>
    </div>
  </div>
</Collapsible>
`;
